--- a/src/todos/app.html
+++ b/src/todos/app.html
@@ -82,7 +82,7 @@
 
         <!-- TODOs APP -->
         <div class="col-md-7 col ps-6 bg-degradado vh-100">
-            <div class="row align-items-center vh-100 wow animate__animated animate__fadeInUp">
+            <div class="row align-items-center vh-100 wow animate__animated animate__fadeInUp" data-wow-offset="20">
                 <div class="row" id="todo-app">
                     <!-- CARD TO DO -->
                     <div class="col-md-7">
