--- a/src/todos/app.html
+++ b/src/todos/app.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col col-md-2 order-md-1 mt-5 wow animate__animated animate__bounceInLeft" data-wow-delay="0.5s">
+        <div class="col col-xl-2 order-md-1 col-title-header mt-5 wow animate__animated animate__bounceInLeft" data-wow-delay="0.5s">
             <div class="row">
                 <p class="fw-bold m-0">GitHub</p>
                 <a class="text-decoration-none text-black" href="https://github.com/AlexBr0s/ToDoApp-JS" role="button">
@@ -9,7 +9,7 @@
             </div>
         </div>
 
-        <div class="col col-md-2 order-md-3 mt-5 wow animate__animated animate__bounceInRight" data-wow-delay="0.5s">
+        <div class="col col-xl-2 order-md-3 col-title-header mt-5 wow animate__animated animate__bounceInRight" data-wow-delay="0.5s">
             <div class="row text-end">
                 <p class="fw-bold m-0">Elaborado con</p>
                 <p class="fs-5">HTML, CSS, JS y Vite</p>
@@ -52,7 +52,7 @@
 <div class="container-fluid">
     <div class="row">
         <!-- FUNCIONALIDADES -->
-        <div class="col-md-5 col align-self-center px-6 py-5 vh-100">
+        <div class="col-xl-5 col align-self-center px-6 py-5 vh-100">
             <div class="wow animate__animated animate__fadeInDown">
                 <span class="badge rounded-pill bg-degradado fs-4">ToDo</span>
                 <p class="title-funciones">
@@ -60,7 +60,7 @@
                 </p>
             </div>
 
-            <div class="row mt-5 ">
+            <div class="row mt-5 div-subtitle-funciones">
                 <p class="subtitle-funciones wow animate__animated animate__fadeInDown">
                     Crea tareas pendientes
                 </p>
@@ -69,7 +69,7 @@
                     tareas completadas.
                 </p>
             </div>
-            <div class="row mt-5">
+            <div class="row mt-5 div-subtitle-funciones">
                 <p class="subtitle-funciones wow animate__animated animate__fadeInDown">
                     Filtros
                 </p>
@@ -81,11 +81,11 @@
         </div>
 
         <!-- TODOs APP -->
-        <div class="col-md-7 col ps-6 bg-degradado vh-100">
-            <div class="row align-items-center vh-100 wow animate__animated animate__fadeInUp" data-wow-offset="20">
+        <div class="col-xl-7 col ps-6 bg-degradado vh-100">
+            <div class="row align-items-center h-100 wow animate__animated animate__fadeInUp" data-wow-offset="20">
                 <div class="row" id="todo-app">
                     <!-- CARD TO DO -->
-                    <div class="col-md-7">
+                    <div class="col-xxl-7">
                         <div class="card rounded-4">
                             <!-- INPUT PARA AGREGAR TODO -->
                             <div class="card-header">
@@ -112,7 +112,7 @@
                     </div>
 
                     <!-- MENU FILTROS -->
-                    <div class="col-md-3 mt-5">
+                    <div class="col-xxl-3 mt-5">
                         <div>
                             <ul class="text-white">
                                 <li class="fs-6" role="button">
