--- a/src/todos/app.html
+++ b/src/todos/app.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="row">
-        <div class="col col-xl-2 order-md-1 col-title-header mt-5 wow animate__animated animate__bounceInLeft" data-wow-delay="0.5s">
+        <div class="col col-xl-2 order-md-1 col-title-header mt-5 wow animate__animated animate__bounceInLeft"
+            data-wow-delay="0.5s">
             <div class="row">
                 <p class="fw-bold m-0">GitHub</p>
                 <a class="text-decoration-none text-black" href="https://github.com/AlexBr0s/ToDoApp-JS" role="button">
@@ -9,23 +10,25 @@
             </div>
         </div>
 
-        <div class="col col-xl-2 order-md-3 col-title-header mt-5 wow animate__animated animate__bounceInRight" data-wow-delay="0.5s">
+        <div class="col col-xl-2 order-md-3 col-title-header mt-5 wow animate__animated animate__bounceInRight"
+            data-wow-delay="0.5s">
             <div class="row text-end">
                 <p class="fw-bold m-0">Elaborado con</p>
                 <p class="fs-5">HTML, CSS, JS y Vite</p>
             </div>
         </div>
 
-        <div class="col order-md-2 align-self-center text-center vh-100 wow animate__animated animate__zoomIn" data-wow-duration="1s">
+        <div class="col order-md-2 align-self-center text-center vh-100 wow animate__animated animate__zoomIn"
+            data-wow-duration="1s">
 
-            <div class="">
+            <div>
                 <div>
-                    <p class="title-alex fs-1">
+                    <p class="title-alex">
                         Alex
                     </p>
                 </div>
                 <div>
-                    <p class="title-todo fs-1">
+                    <p class="title-todo">
                         ToDo App
                     </p>
                 </div>
@@ -81,11 +84,11 @@
         </div>
 
         <!-- TODOs APP -->
-        <div class="col-xl-7 col ps-6 bg-degradado vh-100">
+        <div class="col-xl-7  col ps-6 bg-degradado vh-100">
             <div class="row align-items-center h-100 wow animate__animated animate__fadeInUp" data-wow-offset="20">
                 <div class="row" id="todo-app">
                     <!-- CARD TO DO -->
-                    <div class="col-xxl-7">
+                    <div class="col-xl-9 col-xxl-7 1200w-table">
                         <div class="card rounded-4">
                             <!-- INPUT PARA AGREGAR TODO -->
                             <div class="card-header">
@@ -112,7 +115,7 @@
                     </div>
 
                     <!-- MENU FILTROS -->
-                    <div class="col-xxl-3 mt-5">
+                    <div class="col-xl-3 col-xxl-3 1200w-app mt-5">
                         <div>
                             <ul class="text-white">
                                 <li class="fs-6" role="button">
