--- a/src/todos/app.html
+++ b/src/todos/app.html
@@ -18,34 +18,34 @@
             </div>
         </div>
 
-        <div class="col order-md-2 align-self-center text-center vh-100 wow animate__animated animate__zoomIn"
+        <div class="col order-md-2 text-center vh-100 wow animate__animated animate__zoomIn todo-home"
             data-wow-duration="1s">
 
-            <div>
+            <div class="d-flex justify-content-center align-items-center flex-column h-100">
                 <div>
-                    <p class="title-alex">
-                        Alex
-                    </p>
-                </div>
-                <div>
-                    <p class="title-todo">
-                        ToDo App
-                    </p>
-                </div>
-            </div>
-
-            <div class="divCenter my-5">
-                <a class="text-decoration-none" href="#todo-app" role="button">
-                    <div class="logoApp rounded-5 text-white">
-                        <span class="material-symbols-outlined logo">
-                            done_all
-                        </span>
+                    <div>
+                        <p class="title-alex">
+                            Alex
+                        </p>
                     </div>
-                </a>
+                    <div>
+                        <p class="title-todo">
+                            ToDo App
+                        </p>
+                    </div>
+                </div>
 
+                <div class="my-5">
+                    <a class="text-decoration-none" href="#todo-app" role="button">
+                        <div class="logoApp rounded-5 text-white">
+                            <span class="material-symbols-outlined logo">
+                                done_all
+                            </span>
+                        </div>
+                    </a>
+
+                </div>
             </div>
-
-
 
         </div>
     </div>
@@ -55,40 +55,46 @@
 <div class="container-fluid">
     <div class="row">
         <!-- FUNCIONALIDADES -->
-        <div class="col-xl-5 col align-self-center px-6 py-5 vh-100">
-            <div class="wow animate__animated animate__fadeInDown">
-                <span class="badge rounded-pill bg-degradado fs-4">ToDo</span>
-                <p class="title-funciones">
-                    Funciones
-                </p>
-            </div>
+        <div class="col-12 col-lg-5">
+            <div class="d-flex justify-content-center align-items-center flex-column vh-100">
+                <div class="row w-75">
+                    <div class="wow animate__animated animate__fadeInDown">
+                        <span class="badge rounded-pill bg-degradado fs-4">ToDo</span>
+                        <p class="title-funciones">
+                            Funciones
+                        </p>
+                    </div>
 
-            <div class="row mt-5 div-subtitle-funciones">
-                <p class="subtitle-funciones wow animate__animated animate__fadeInDown">
-                    Crea tareas pendientes
-                </p>
-                <p class="text-funciones wow animate__animated animate__fadeInLeftBig">
-                    Crea, modifica su estado y borra
-                    tareas completadas.
-                </p>
-            </div>
-            <div class="row mt-5 div-subtitle-funciones">
-                <p class="subtitle-funciones wow animate__animated animate__fadeInDown">
-                    Filtros
-                </p>
-                <p class="text-funciones wow animate__animated animate__fadeInLeftBig">
-                    Escoge entre los distintos filtros
-                    y ordena tus tareas pendientes.
-                </p>
+                    <div class="mt-5 div-subtitle-funciones">
+                        <p class="subtitle-funciones wow animate__animated animate__fadeInDown">
+                            Crea tareas pendientes
+                        </p>
+                        <p class="text-funciones wow animate__animated animate__fadeInLeftBig">
+                            Crea, modifica su estado y borra
+                            tareas completadas.
+                        </p>
+                    </div>
+                    <div class="mt-5 div-subtitle-funciones">
+                        <p class="subtitle-funciones wow animate__animated animate__fadeInDown">
+                            Filtros
+                        </p>
+                        <p class="text-funciones wow animate__animated animate__fadeInLeftBig">
+                            Escoge entre los distintos filtros
+                            y ordena tus tareas pendientes.
+                        </p>
+                    </div>
+                </div>
+
             </div>
         </div>
 
         <!-- TODOs APP -->
-        <div class="col-xl-7  col ps-6 bg-degradado vh-100">
-            <div class="row align-items-center h-100 wow animate__animated animate__fadeInUp" data-wow-offset="20">
-                <div class="row" id="todo-app">
+        <div class="col-md-12 col-lg-7 bg-degradado vh-100">
+            <div class="wow animate__animated animate__fadeInUp" data-wow-offset="20">
+                <div class="d-flex d-flex justify-content-center vh-100 align-items-center" id="todo-app">
+
                     <!-- CARD TO DO -->
-                    <div class="col-xl-9 col-xxl-7 1200w-table">
+                    <div class="w-50">
                         <div class="card rounded-4">
                             <!-- INPUT PARA AGREGAR TODO -->
                             <div class="card-header">
@@ -115,7 +121,7 @@
                     </div>
 
                     <!-- MENU FILTROS -->
-                    <div class="col-xl-3 col-xxl-3 1200w-app mt-5">
+                    <div class="w-25">
                         <div>
                             <ul class="text-white">
                                 <li class="fs-6" role="button">
@@ -141,6 +147,7 @@
                             </ul>
                         </div>
                     </div>
+
                 </div>
             </div>
 
